--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,3 @@
-/* Adding Overscroll Behavior with Backgrounds */
-/* html {
-    height: 100%;
-    background: linear-gradient(90deg, #000000, #00460d, #71ff8b);
-    background-size: 600% 600%;
-    background-attachment: fixed;
-    animation: gradientMove 60s ease infinite;
-} */
-
 body {
     margin: 0;
     height: 100vh;
@@ -39,8 +30,6 @@ header {
     background-size: 600% 600%;
     background-attachment: fixed;
     animation: gradientMove 60s ease infinite;
-
-    transition: transform 0.3s ease-in-out; /* Smooth transition for overscroll */
 }
 
 @keyframes text-color-change {
@@ -50,7 +39,7 @@ header {
 }
 
 header h1 {
-    text-align: center;
+    position: relative;
     font-family: Andale Mono, monospace;
     font-size: 4rem;
     color: #00460d;
