--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,12 @@
 body {
-    margin: 0;
-    height: 100vh;
     display: block;
-    justify-content: center;
-    align-items: center;
-    background: #1d211e;
+    width: 100%;  /* Ensure body spans the full width */
+    margin: 0;  /* Remove default margin to ensure full-width display */
     font-family: Arial, sans-serif;
-}
-
-@keyframes gradientMove {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+    background: linear-gradient(90deg, #000000, #00460d, #71ff8b);
+    background-size: 600% 600%;
+    background-attachment: fixed;
+    animation: gradientMove 60s ease infinite;
 }
 
 header {
@@ -26,16 +21,7 @@ header {
     justify-content: center;
     align-items: center;
 
-    background: linear-gradient(90deg, #000000, #00460d, #71ff8b);
-    background-size: 600% 600%;
-    background-attachment: fixed;
-    animation: gradientMove 60s ease infinite;
-}
-
-@keyframes text-color-change {
-    0% {color: #71ff8b;}
-    50% {color: #00460d;}
-    100% {color: #71ff8b;}
+    background: transparent;
 }
 
 header h1 {
@@ -46,11 +32,16 @@ header h1 {
     animation: text-color-change 60s ease infinite;
 }
 
-.sticky-bar {
+.sticky-line {
     position: sticky;
     top: 0;
-    background: #00460d;
-    padding: 2px;
+    width: 100%;
+    height: 3px;
+    border: none;
+    margin: 0;  /* Remove any default margin */
+    padding: 0;  /* Remove padding if any */
+
+    background-color: #00460d;
     margin-top: 10rem; /* Match the height of the header */
     z-index: 1; /* Ensure it stays above content but below the header */
 }
@@ -58,9 +49,21 @@ header h1 {
 main {
     position: relative; /* Ensure content scrolls normally */
     background-color: #1d211e;
-    padding: 10px;
+    padding: 10px 0px 0;
     min-height: 150vh; /* Ensure the content has enough space to scroll */
     z-index: 0; /* Lower than header */
+}
+
+@keyframes gradientMove {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+
+@keyframes text-color-change {
+    0% {color: #71ff8b;}
+    50% {color: #00460d;}
+    100% {color: #71ff8b;}
 }
 
 .timeline-item {
