--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
-html, body {
+html {
+    animation: backgroundChange 10s ease infinite;
+}
+
+.no-overscroll {
+    overscroll-behavior: none; /* Disable overscroll effects */
+}
+
+body {
     display: block;
-    height: 100%;
-    width: 100%;  /* Ensure body spans the full width */
-    margin: 0;  /* Remove default margin to ensure full-width display */
+    width: 100%;
     font-family: Arial, sans-serif;
-    background: linear-gradient(90deg, #000000, #00460d, #71ff8b);
-    background-size: 600% 600%;
-    background-attachment: fixed;
-    animation: gradientMove 60s ease infinite;
+    margin: 0;
 }
 
 header {
@@ -16,13 +19,11 @@ header {
     left: 0;
     width: 100%;
     height: 10rem; /* Adjust the height as needed */
-    z-index: 0; /* Ensure header stays on top */
+    z-index: 0;
 
     display: flex;
     justify-content: center;
     align-items: center;
-
-    background: transparent;
 }
 
 header h1 {
@@ -30,7 +31,7 @@ header h1 {
     font-family: Andale Mono, monospace;
     font-size: 4rem;
     color: #00460d;
-    animation: text-color-change 60s ease infinite;
+    animation: text-color-change 10s ease infinite;
 }
 
 .sticky-line {
@@ -39,22 +40,74 @@ header h1 {
     width: 100%;
     height: 3px;
     border: none;
-    margin: 0;  /* Remove any default margin */
-    padding: 0;  /* Remove padding if any */
+    margin: 0; /* Removes the default margin */
+    overscroll-behavior: none;
 
     background-color: #00460d;
     margin-top: 10rem; /* Match the height of the header */
     z-index: 1; /* Ensure it stays above content but below the header */
-
-    overscroll-behavior: none;
 }
 
 main {
     position: relative; /* Ensure content scrolls normally */
     background-color: #1d211e;
-    padding: 10px 0px 0;
+    padding: 50px 10px 5px;
+    margin: 0;
     min-height: 150vh; /* Ensure the content has enough space to scroll */
-    z-index: 0; /* Lower than header */
+    z-index: 0;
+}
+
+.item {
+    position: relative; /* For positioning pseudo-elements */
+    width: 80%;
+    margin: 50px auto; /* Center the box */
+    padding: 20px;
+
+    /* Transparent background */
+    background-color: transparent;
+    text-align: center; /* Center text inside */
+}
+
+.item h3 {
+margin: 0 0 10px;
+font-size: 1.5rem;
+color: #71ff8b;
+}
+
+.item p {
+margin: 0;
+font-size: 1rem;
+color: #71ff8b;
+}
+
+.item::before,
+.item::after {
+    content: '';
+    position: absolute;
+    width: 20px; /* Width of the stroke */
+    height: 20px; /* Height of the stroke */
+    background-color: transparent;
+    border: 2px solid #71ff8b; /* Color of the stroke */
+}
+
+.item::before {
+    top: 0;
+    left: 0;
+    border-right: none; /* Remove right edge */
+    border-bottom: none; /* Remove bottom edge */
+}
+
+.item::after {
+    bottom: 0;
+    right: 0;
+    border-left: none; /* Remove left edge */
+    border-top: none; /* Remove top edge */
+}
+
+@keyframes backgroundChange {
+    0% { background-color: green;}
+    50% { background-color: black;}
+    100% {background-color: green;}
 }
 
 @keyframes gradientMove {
@@ -67,51 +120,4 @@ main {
     0% {color: #71ff8b;}
     50% {color: #00460d;}
     100% {color: #71ff8b;}
-}
-
-.timeline-item {
-    position: relative; /* For positioning pseudo-elements */
-    width: 80%; /* Adjust width as needed */
-    margin: 20px auto; /* Center the box */
-    padding: 20px;
-
-    /* Transparent background */
-    background-color: transparent;
-    text-align: center; /* Center text inside */
-}
-
-.timeline-item h3 {
-margin: 0 0 10px;
-font-size: 1.5rem;
-color: #71ff8b;
-}
-
-.timeline-item p {
-margin: 0;
-font-size: 1rem;
-color: #71ff8b;
-}
-
-.timeline-item::before,
-.timeline-item::after {
-    content: '';
-    position: absolute;
-    width: 20px; /* Width of the stroke */
-    height: 20px; /* Height of the stroke */
-    background-color: transparent;
-    border: 2px solid #71ff8b; /* Color of the stroke */
-}
-
-.timeline-item::before {
-    top: 0;
-    left: 0;
-    border-right: none; /* Remove right edge */
-    border-bottom: none; /* Remove bottom edge */
-}
-
-.timeline-item::after {
-    bottom: 0;
-    right: 0;
-    border-left: none; /* Remove left edge */
-    border-top: none; /* Remove top edge */
 }
