--- a/pages/page-styles.css
+++ b/pages/page-styles.css
@@ -1,149 +1,184 @@
 html {
-    background: #1B4332;
+    padding: 0;
+    margin: 0;
+    background-color: #031911;
 }
 
 body {
-    display: block;
-    width: 100%;
-    font-family: Arial, sans-serif;
+    font-family: Menlo, monospace;
+    padding: 0;
     margin: 0;
-    text-align: center;
-    align-items: center;
-    color: #D8F3DC;
-    padding-bottom: 30px;
+    background-color: #031911;
 }
 
-h1 {
-    margin-top: 30px;
+header {
+    padding: 0;
+    margin: 0;
+    color: #52B788;
+}
+
+header h1 {
+    margin: 0;
+    padding: 3% 0 0 4%;
+    font-size: 4vw;
+}
+
+header h3 {
+    padding: 0 0 0 4%;
+    font-size: 1.5vw;
+}
+
+header p {
+    padding: 0 0 0 4%;
+    font-size: 1vw;
 }
 
 hr {
-    width: 95%;
-    height: 3px;
+    width: calc(100% - 8%);
+    height: 1px;
     border: none;
     border-radius: 5px;
-    background-color: #40916C;
+    background: linear-gradient(90deg, #52B788, #09422D);
 }
 
-.spacer {
+main {
+    color: #52B788;
+}
+
+main h2 {
+    padding: 0 4% 0 4%;
+    font-size: 3vw;
+}
+
+main h3 {
+    padding: 0 4% 0 4%;
+    font-size: 2vw;
+}
+
+main p {
+    padding: 0 4% 0 4%;
+    font-size: 1vw;
+}
+
+main .spacer {
     height: 1px;
 }
 
-table {
-    width: 90%; /* Adjust table width */
-    border-collapse: collapse; /* Merge border lines */
-    margin: 20px auto; /* Optional: Add spacing around the table */
+main table {
+    width: calc(100% - 8%);
+    border-collapse: collapse;
+    margin: 0 auto;
+    color: #031911;
 }
 
-th, td {
+main th, main td {
     padding: 10px; /* Adjust padding for cells */
     text-align: left; /* Align text in cells */
 }
 
-th {
-    background-color: #081C15; /* Header background color */
+main th { /* Header */
+    background-color: #05291C;
+    color: #52B788;
+    font-size: 1.5vw;
 }
 
-td {
-    background-color: #1B4332; /* Transparent cell background */
+main td {
+    background-color: #0D6244;
+    font-size: 1.1vw;
 }
 
-tr:nth-child(even) td {
-    background-color: #2D6A4F; /* Alternate row shading */
+main tr:nth-child(even) td {
+    background-color: #0B5239; /* Alternate row */
 }
 
-table tr:hover td {
-    background-color: #081C15; /* Highlight row on hover */
-}
-
-table th, table td {
-    border: 1px transparent rgba(0, 0, 0, 0.2); /* Transparent/customizable borders */
+main table tr:hover td {
+    background-color: #52B788;
 }
 
 /* Customize column widths */
-colgroup col:nth-child(1) {
-    width: 35%; /* First column width */
+main colgroup col:nth-child(1) {
+    width: 33%; /* First column width */
 }
 
-colgroup col:nth-child(2) {
-    width: 30%; /* Second column width */
+main colgroup col:nth-child(2) {
+    width: 25%; /* Second column width */
 }
 
-colgroup col:nth-child(3) {
-    width: 15%; /* Third column width */
+main colgroup col:nth-child(3) {
+    width: 17%; /* Third column width */
 }
 
-colgroup col:nth-child(4) {
-    width: 10%; /* Fourth column width */
+main colgroup col:nth-child(4) {
+    width: 8%; /* Fourth column width */
 }
 
-colgroup col:nth-child(5) {
-    width: 35%; /* Fourth column width */
+main colgroup col:nth-child(5) {
+    width: 10%; /* Fifth column width */
 }
 
-.image-text {
+main .image-text {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Two equal columns for text and image group */
-    width: 90%; /* Full width of the container */
+    grid-template-columns: 1fr 1fr; /* Two equal columns */
+    width: 90%;
     margin: auto;
     gap: 10%;
 }
 
-.text {
+main .text {
     display: flex;
-    flex-direction: column; /* Stack text elements vertically */
-    justify-content: center; /* Center text vertically within the column */
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
 }
 
-.text h2, .text h4{
-    margin: 10px; /* Remove all default margins */
+main .text h2, main .text h4{
+    margin: 10px;
 }
 
-.text p {
+main .text p {
     margin-top: 25px;
 }
 
-.image-group {
+main .image-group {
     display: flex;
-    flex-direction: column; /* Stack rows vertically */
-    justify-content: center; /* Center the group vertically */
-    align-items: center; /* Center the group horizontally */
-    gap: 10px; /* Space between rows */
-    width: 95%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: calc(100% - 8%);
     margin: auto;
-    max-width: 100%; /* Prevent overflowing */
+    max-width: 100%;
     object-fit: cover;
 }
 
-.image-text hr {
-    width: 60%;
-    height: 2px;
+main .image-text hr {
+    width: 80%;
+    height: 1px;
     border: none;
     margin: 0px auto;
     border-radius: 5px;
     background-color: #D8F3DC;
 }
 
-.image-group img {
-    max-width: 100%; /* Ensures images are responsive */
-    height: auto; /* Maintains aspect ratio */
-    border-radius: 10px; /* Optional: Rounded corners */
+main .image-group img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
 
 /* Style for rows */
-.image-group .row {
-    display: flex; /* Arrange columns horizontally within the row */
-    gap: 10px; /* Space between columns */
-    justify-content: space-between; /* Distribute columns evenly across the row */
+main .image-group .row {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
 }
 
 /* Style for columns */
-.image-group .column {
-    flex: 1; /* Ensure columns have equal width */
-    display: flex; /* Use Flexbox for centering */
-    flex-direction: column; /* Stack images vertically */
-    align-items: center; /* Horizontally center images */
-    justify-content: center; /* Vertically center images */
-    gap: 10px; /* Space between images */
+main .image-group .column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
