Fix index button font

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@
     --dark-green-glow: #03191133;
     --header-height: 10vh;
     --body-side-padding: 3vw;
+    --font: Gill Sans;
 }
 
 header {
