Add font fallbacks

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@
     --dark-green-glow: #03191133;
     --header-height: 10vh;
     --body-side-padding: 3vw;
-    --font: Gill Sans;
+    --font: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 header {
